Fixed invisible card background + more code

--- a/play/game.css
+++ b/play/game.css
@@ -1,1 +1,9 @@
+#title {
+  align-content: center;
+  margin-top: auto;
+}
 
+div {
+  display: block;
+  margin: auto;
+}
